dist_man1_MANS=

if BUILD_REGUSD
  dist_man1_MANS+=regusd.1
endif

if ENABLE_QT
  dist_man1_MANS+=regus-qt.1
endif

if BUILD_REGUS_CLI
  dist_man1_MANS+=regus-cli.1
endif

if BUILD_REGUS_TX
  dist_man1_MANS+=regus-tx.1
endif

if BUILD_REGUS_UTIL
  dist_man1_MANS+=regus-util.1
endif

if ENABLE_WALLET
if BUILD_REGUS_WALLET
  dist_man1_MANS+=regus-wallet.1
endif
endif
